# Line-Follower-Turtlebot-in-gazebo

./: README.md
models/line/: model.sdf
src/line_follower/: line_follower_p.py
worlds/: yellowline.world
yellow_line/: CMakeLists.txt  package.xml
yellow_line/models/line/: model.config
yellow_line/worlds/: yellowline.launch
